--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -23,6 +23,7 @@ body {
 .nav-bar .img-banniere {
     position: absolute;
     top: 0;
+    left:0;
     height: 90%;
     width: 100%;
     z-index: -2;
