--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -76,7 +76,7 @@
             <a class="text-light btn btn-danger mt-1" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
 <!-- Modal -->
         <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-center">
+            <div class="modal-dialog modal-xl modal-center">
                 <div class="modal-content modal-rounded p-2 modal-tag">
                     <div class="modal-body">
                         <div class="modal-container-border text-center">
@@ -86,39 +86,45 @@
                                 </div>
                             </div>
                             <div class="col-12 tag-container row">
-                                <div class="col-5 tag-user-container">
-                                    <div class="tag-user">
-                                        <div class="tag-user-title">
-                                            Tags User
-                                        </div>
-                                        <div class="tag-container-body">
-                                            <div class="tag-user-tags row" id="tag-user" name="tag-user">
+                                <div class="col-12 row">
+                                    <div class="col-9 row">
+                                        <div class="col-6 tag-user-container">
+                                            <div class="tag-user">
+                                                <div class="tag-user-title">
+                                                    Tags User
+                                                </div>
+                                                <div class="tag-container-body">
+                                                    <div class="tag-user-tags row" id="tag-user" name="tag-user">
 
+                                                    </div>
+                                                </div>
+                                                <div class="tag-container-footer">
+                                                    <button type="button" class="btn btn-danger" id="create-tag" style="display: none;">Créer le tag</button>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="tag-container-footer">
-                                            <button type="button" class="btn btn-danger" id="create-tag" style="display: none;">Créer le tag</button>
+                                        <div class="col-6 tag-video-container">
+                                            <div class="tag-video">
+                                                <div class="tag-video-title">
+                                                    Tags Video   
+                                                </div>
+                                                <div class="tag-video-tags row" id="tag-video" name="tag-video">
+                                                        
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-5 tag-video-container">
-                                    <div class="tag-video">
-                                        <div class="tag-video-title">
-                                            Tags Video   
-                                        </div>
-                                        <div class="tag-video-tags row" id="tag-video" name="tag-video">
-                                                
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 tag-recap-container">
-                                    <div class="tag-recap">
-                                        <div class="tag-recap-title">
-                                            Recap
-                                        </div>
-                                        <div class="tag-container-body">
-                                            <div class="tag-recap-tags row" id="tag-recap" name="tag-recap">
+                                    <div class="col-3">
+                                        <div class="col-12 tag-recap-container">
+                                            <div class="tag-recap">
+                                                <div class="tag-recap-title">
+                                                    Recap
+                                                </div>
+                                                <div class="tag-container-body">
+                                                    <div class="tag-recap-tags row" id="tag-recap" name="tag-recap">
 
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
