--- a/assets/styles/stats.css
+++ b/assets/styles/stats.css
@@ -5,6 +5,22 @@
 
 
 /* ------------------------------------ PARTIE GRAPHIQUES --------------------------------------------------- */
+.graph{
+    visibility: hidden;
+    border-radius: 30px;
+}
+
+.btn-graph{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.double-column{
+    width: 50%;
+}
+
 
 .chart-container {
     width: 50%;
@@ -21,11 +37,17 @@ canvas {
 }
 
 .container-graph{
+    position: relative;
     background-color: white;
     /*border: solid red;*/
-    width: 45%;
+    /*width: 40%;*/
     padding: 1% 2% 1% 2%;
     border-radius: 30px;
+}
+
+.graph-40{
+    width: 48%;
+    /*margin: 2%;*/
 }
 
 .graph-resume{
