--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -64,15 +64,16 @@
     border-radius: 10px;
     height: 100%;
     min-height: 300px;
-    max-height: 500px;
+    max-height: 400px;
     overflow: auto;
 }
 
 .recap-width {
-    width: 31%;
+    width: 29%;
 }
 
 .tag,
+.tag-js,
 .tag-recap-selected {
     border: #EE4145 solid 2px;
     border-radius: 10px;
@@ -87,6 +88,7 @@
 }
 
 .tag:hover,
+.tag-js:hover,
 .tag-recap-selected:hover {
     background-color: #dc3545;
     color: white;
@@ -133,7 +135,7 @@ h3 {
 .form-check-input {
     border: solid #ced4da 1px;
     padding: 2%;
-    width: 10%!important;
+    width: 25px!important;
     height: 25px;
 }
 
