--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -73,8 +73,31 @@
     </div>
     {{form_end(filterForm)}}
 </div><!-- end container-main -->
+
+{% if data is defined %}
+<div class="container-main mt-3">
+    <h3>RESULTATS</h3>
+    <div class="under_title"></div>
+
+    <div class="row justify-content-between container-button mt-1">
+        <div class="col-sm-7 col-md-3">
+            <label for="check" class="form-label mt-1">Select all</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="CheckBoxSelectAll">
+            </div>
+        </div>
+        <div class="col-sm-7 col-md-3">
             <a class="text-light btn btn-danger mt-1" id="addTagButton" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
-<!-- Modal -->
+        </div>
+        <div class="col-sm-7 col-md-3" >
+            {% if stringParam is defined %}
+                <a href="{{ path ('stats_globale', {'stringParam' : stringParam}) }}" class="btn btn-danger mt-1" >Voir les stats</a>
+            {% endif %}
+        </div>
+        <div class="col-sm-7 col-md-3" >
+            <button type="button" class="btn btn-danger mt-1">Extraire les données</button>
+        </div>
+        <!-- Modal -->
         <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-center">
                 <div class="modal-content modal-rounded p-2 modal-tag">
@@ -138,30 +161,6 @@
                 </div>
             </div>
         </div> <!-- endmodal -->
-{% if data is defined %}
-<div class="container-main mt-3">
-    <h3>RESULTATS</h3>
-    <div class="under_title"></div>
-
-    <div class="row justify-content-between container-button mt-1">
-        <div class="col-sm-7 col-md-3">
-            <label for="check" class="form-label mt-1">Select all</label>
-            <div class="form-check">
-                <input class="form-check-input" id="check" type="checkbox" value="" id="flexCheckDefault">
-            </div>
-        </div>
-        <div class="col-sm-7 col-md-3">
-            <a class="text-light btn btn-danger mt-1" id="addTagButton" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
-        </div>
-        <div class="col-sm-7 col-md-3" >
-            {% if stringParam is defined %}
-                <a href="{{ path ('stats_globale', {'stringParam' : stringParam}) }}" class="btn btn-danger mt-1" >Voir les stats</a>
-            {% endif %}
-        </div>
-        <div class="col-sm-7 col-md-3" >
-            <button type="button" class="btn btn-danger mt-1">Extraire les données</button>
-        </div>
-
         <div class="container">
             <table class="table" style="margin-top:5%">
                 <tbody>
@@ -169,7 +168,7 @@
                     <tr>
                         <th scope="row">
                             <div class="form-check" >
-                                <input class="form-check-video-res" type="checkbox" id="{{video.id}}">
+                                <input class="form-check-video-res " type="checkbox" id="{{video.id}}">
                             </div>
                         </th>
                         <td>
