Add tag to info modal

--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -77,6 +77,9 @@
                         <p class="fs-5 mt-3">Les résultats de la recherche</p>
                         <p>Les résultats de votre recherche s'affichent donc ensuite. Vous pouvez cliquer pour voir les statistiques des vidéos qui sont ressortis de la recherche.
                         Pour avoir des infos sur une seule vidéo, vous pouvez cliquer sur le titre de celle-ci.</p>
+                        <p class="fs-5 mt-3">Les tags des videos</p>
+                        <p>Les vidéos contiennent toutes des tags. Les tags peuvent être soit "Video" soit "User". Les tags Vidéo sont les tags insérés par les vidéastes eux-même.
+                        Les tags "User" sont les tags qu'un utilisateur de Youtube-Catalogue peut créer et attribuer lui-même à une ou plusieurs vidéos afin d'identifier certains groupes de vidéos </p>
                         <p class="fs-5 mt-3">Les statistiques</p>
                         <p>Les graphiques se chargent automatiquement les uns à la suite des autres. 
                         Cela peut prendre un certain temps si le résultat de votre recherche a ressorti un très grand nombre de vidéos.
