--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -87,16 +87,18 @@
             </div>
         </div>
         <div class="col-sm-7 col-md-3">
-            <a class="text-light btn btn-danger mt-1" id="addTagButton" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
-        </div>
-        <div class="col-sm-7 col-md-3" >
-            {% if stringParam is defined %}
-                <a href="{{ path ('stats_globale', {'stringParam' : stringParam}) }}" class="btn btn-danger mt-1" >Voir les stats</a>
+            {% if stringParam is not empty %}
+                <a class="text-light btn btn-danger mt-1" id="addTagButton" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
             {% endif %}
         </div>
         <div class="col-sm-7 col-md-3" >
-            <button type="button" class="btn btn-danger mt-1">Extraire les données</button>
+            {% if stringParam is not empty %}
+                <a href="{{ path ('stats_globale', {'stringParam' : stringParam}) }}" class="btn btn-danger mt-1" >Voir les stats</a>
+            {% endif %}
         </div>
+        <!--<div class="col-sm-7 col-md-3" >
+            <button type="button" class="btn btn-danger mt-1">Extraire les données</button>
+        </div>-->
         <!-- Modal -->
         <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-center">
