--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -47,7 +47,7 @@
               {{tag.name}}
           </div>
         {% else %}
-          <div class="tag col-3 mx-1 px-1 pastille-perso text-center">
+          <div class="tag col-3 m-1 px-1 pastille-perso text-center">
               {{tag.name}}
           </div>
         {% endif %}
