--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -11,9 +11,8 @@
                 <div class="modal-body">
                     <div class="modal-container-border text-center">    
                         <div id="before-submit-div" name="before-submit-div" >
-                            <p>Drag your CSV File here</p>
+                            <p class="mb-5">Upload your CSV File here</p>
                             <i class="h1 bi bi-filetype-csv"></i>
-                            <p class="h3">--------- OR ---------</p>
                         </div>
                         <div id="post-submit-div" class="d-none mb-4">
                             File uploaded successfully!
